--- a/cloud-provider-payment-8004/src/main/resources/application.yml
+++ b/cloud-provider-payment-8004/src/main/resources/application.yml
@@ -20,14 +20,14 @@ spring:
       max-wait: 10000
       test-on-borrow: true
       test-while-idle: true
-      # \u72B6\u6001\u76D1\u63A7
+      # 状态监控
       filter:
         stat:
           enabled: true
           db-type: mysql
           log-slow-sql: true
           slow-sql-millis: 2000
-        # \u76D1\u63A7\u8FC7\u6EE4\u5668
+        # 监控过滤器
       web-stat-filter:
         enabled: true
         exclusions:
