--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>cloud-consumer-order-84</module>
         <module>cloud-provider-payment-8005</module>
         <module>cloud-consumer-order-85</module>
+        <module>cloud-consumer-feign-order-86</module>
     </modules>
     <groupId>cn.jxufe</groupId>
     <artifactId>SCProject</artifactId>
