feature(9527) 添加Gateway转发请求

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>cloud-consumer-feign-order-86</module>
         <module>cloud-provider-hystrix-8003</module>
         <module>cloud-consumer-feign-hystrix-83</module>
+        <module>cloud-gateway-9527</module>
     </modules>
     <groupId>cn.jxufe</groupId>
     <artifactId>SCProject</artifactId>
