feature(9527 application.yml) 配置gateway动态路由

--- a/cloud-gateway-9527/src/main/resources/application.yml
+++ b/cloud-gateway-9527/src/main/resources/application.yml
@@ -18,7 +18,8 @@ spring:
     gateway:
       routes:
         - id: payment_route
-          uri: http://localhost:8001
+#          uri: http://localhost:8001
+          uri: lb://cloud-provider-payment #配置动态路由的写法
           predicates:
             - Path=/payment/**
 #        - id: payment_route2
