feature(8803) 添加消费者二号，然后将其设置为同一组解决重复消费问题

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>cloud-gateway-9527</module>
         <module>cloud-stream-rabbitmq-provider-8801</module>
         <module>cloud-stream-rabbitmq-listener-8802</module>
+        <module>cloud-stream-rabbitmq-listener-8803</module>
     </modules>
     <groupId>cn.jxufe</groupId>
     <artifactId>SCProject</artifactId>
