feature(86 8001) 添加 zipkin（运行在阿里云服务器）请求链路跟踪

--- a/cloud-consumer-feign-order-86/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order-86/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: cloud-consumer-feign-order-86
+  zipkin:
+    base-url: http://47.101.223.154:9411
+  sleuth:
+    sampler:
+      probability: 1
 
 eureka:
   client:
