--- a/cloud-consumer-feign-order-86/pom.xml
+++ b/cloud-consumer-feign-order-86/pom.xml
@@ -30,10 +30,13 @@
             <groupId>cn.jxufe</groupId>
             <artifactId>cloud-common</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
     </dependencies>
 
