--- a/cloud-provider-payment-8001/src/main/resources/application.yml
+++ b/cloud-provider-payment-8001/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: cloud-provider-payment
+  zipkin:
+    base-url: http://47.101.223.154:9411
+  sleuth:
+    sampler:
+      probability: 1
   datasource:
     druid:
       url: jdbc:mysql://47.101.223.154:3306/cloud?autoReconnect=true&useUnicode=true&createDatabaseIfNotExist=true&characterEncoding=utf8&useSSL=true&serverTimezone=GMT
